--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -14,36 +14,33 @@
         {% endblock page_header %}
       </div>
       <div class="menu">
-        <h2><em>My name is Jacob and I love code.  I put lots of stuff up on 
-          <a href="http://github.com/baroquebloke">GitHub</a>.  When I'm not
-          studying code I'm usually brewing beer or indulging in 
-          <a href="http://www.baroquebloke.com">My Photography</a>. 
-          Please feel free to <a href="/static/FarnsworthResume.pdf" 
-            download="Jacob Farnsworth's Resume">Download My Resume</a> or 
-          read it below.  And, if you have some questions please don't
-          hesitate to
-          <a href="mailto:jake@baroquebloke.com">Contact Me</a>.</em></h2>
+        <h2><em>Check out my 
+         <a href="http://github.com/baroquebloke">GitHub</a>. <br>Take a 
+         gander at <a href="http://www.baroquebloke.com">My Photography</a>. 
+         <br>Feel free to <a href="/static/FarnsworthResume.pdf" 
+         download="Jacob Farnsworth's Resume">Download My Resume</a>.
+         <br>Got some questions? Feel free to 
+         <a href="mailto:jake@baroquebloke.com">Get In Touch</a>.</em></h2>
       </div>
       <div class="note" id="personal">
-        <h2>Having diligently done my time in higher education in pursuit of
-          a music degree, I've decided to finally embrace my inner nerd.  I 
-          have always been facinated by computers, technologie, gadgets,
-          and mischief. Taking things apart makes me feel like a kid.  Putting 
-          things back together again makes me feel like Einstein.  Making 
-          things that actually work makes me think I'm Neo.  You know, flying
-          around the Matrix and shit...</h2>
+        <h2>root$ whoami<br>...</h2>
+        <p>Having diligently done my time in higher education in pursuit of
+          a music degree, I've decided to finally embrace my inner nerd.  
+           </p>
       </div>
       <div class="note" id="skillz">
-        <h2>I am proficient in Python, and largly self taught in HTML,
+        <h2>root$ vim skillz.rc<br>...</h2>
+        <p>I am proficient in Python, and largly self taught in HTML,
           CSS3, and Flask.  I am also good a juggling multiple challanges such as
           finishing a degree while simultainiously planning a wedding (my own), 
           working numerous jobs (see resume below), and teaching my self web 
-          design.</h2>
+          design.</p>
       </div>
       <div class="note" id="whyHire">
-        <h2>Guess what?!  I'd like to work with you!  I'm looking to participate 
+        <h2>root$ chmod -rwxrwxrwx farnsworth.txt<br>...</h2>
+        <p>I'd like to work with you!  I'm looking to participate 
           in a competant team that will allow me to contribute new and unique
-          ideas as well as continue to grow faster than I ever could on my own.</h2>
+          ideas as well as continue to grow faster than I ever could on my own.</p>
       </div>
       <div class="page-content">
         {% block content %}
