--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -37,7 +37,7 @@
           design.</p>
       </div>
       <div class="note" id="whyHire">
-        <h2>root$ chmod -rwxrwxrwx farnsworth.txt<br>...</h2>
+        <h2>root$ chmod -rwxrwxrwx jacob.farnsworth<br>...</h2>
         <p>I'd like to work with you!  I'm looking to participate 
           in a competant team that will allow me to contribute new and unique
           ideas as well as continue to grow faster than I ever could on my own.</p>
