--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -14,22 +14,21 @@
         {% endblock page_header %}
       </div>
       <div class="menu">
-        <h2><em>Check out my 
-         <a href="http://github.com/baroquebloke">GitHub</a>. <br>Take a 
-         gander at <a href="http://www.baroquebloke.com">My Photography</a>. 
-         <br>Feel free to <a href="/static/FarnsworthResume.pdf" 
+        <h2><em>&raquoTake a gander at 
+          <a href="http://www.baroquebloke.com">My Photography</a>. 
+         <br>&raquoGo ahead and <a href="/static/FarnsworthResume.pdf" 
          download="Jacob Farnsworth's Resume">Download My Resume</a>.
-         <br>Got some questions? Feel free to 
+         <br>&raquoHave questions? Feel free to 
          <a href="mailto:jake@baroquebloke.com">Get In Touch</a>.</em></h2>
       </div>
       <div class="note" id="personal">
-        <h2>root$ whoami<br>...</h2>
+        <h2>$ whoami<br>...</h2>
         <p>Having diligently done my time in higher education in pursuit of
           a music degree, I've decided to finally embrace my inner nerd.  
            </p>
       </div>
       <div class="note" id="skillz">
-        <h2>root$ vim skillz.rc<br>...</h2>
+        <h2>$ ls /skillz<br>...</h2>
         <p>I am proficient in Python, and largly self taught in HTML,
           CSS3, and Flask.  I am also good a juggling multiple challanges such as
           finishing a degree while simultainiously planning a wedding (my own), 
@@ -37,7 +36,7 @@
           design.</p>
       </div>
       <div class="note" id="whyHire">
-        <h2>root$ chmod -rwxrwxrwx jacob.farnsworth<br>...</h2>
+        <h2>$ chmod +x hire.me<br>...</h2>
         <p>I'd like to work with you!  I'm looking to participate 
           in a competant team that will allow me to contribute new and unique
           ideas as well as continue to grow faster than I ever could on my own.</p>
