--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
+<h2>$ vim resume.txt<br>...</h2>
 <h3>Education</h3>
 <ul>
   <li><b>Bachelor of Music <i>2014</i> - Oberlin Conservatory of Music</b></li>
