--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,36 +22,41 @@
 
 {% block personal %}
 <h2>
-  Jake at a Glance
+  The Lowdown
   <br>...
 </h2>
 <p>
-  Jacob, or Jake, a.k.a. Baroquebloke, is a truly unique and highly inteligent
-  individual with a fondness for puns and 
-  <a href="http://www.ouaismaisbon.ch">bizarre French humor</a>, and speaking 
-  about himself in the third person.
-</p>
-<p>
-  When he's not studying code or thinking about tech you can  usually 
-  find him reading old scifi, brewing beer, or desiging his off-the-grid tiny
-  home and urban farm with his wife.
-</p>
-<p>
-  You can usually tell when he's in a room by the sound of passionate 
-  discussions about farm animals:
-</p>
-<p>
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<em>"I don't care what other people think, 
-    I will have goats one day, damnit!"</em>
+  Having done my time in higer education I decided to start the long and 
+  arduous path to recovery.  Along the way I've picked up a fondness for 
+  good bread, <a href="http://www.ouaismaisbon.ch">bizarre French humor</a>, 
+  old Scifi, and a great eye for photography.   
 </p>
 {% endblock %}
 
 {% block why_programming %}
 <h2>
-  So Why Programming?
+  What Brought Me Here?
   <br>...
 </h2>
 <p>
+  When I was younger I fell in love with music.  This proceeded to guide my 
+  life for well over a decade, through highschool, a couple years at 
+  Florida State University, and finally to Oberlin Conservatory.  
+  While there I met a girl who, unbeknownst to me, would steal me away to
+  France and eventually become my wife.  
+</p>
+<p>
+  Though we're stateside again those two years abroad helped me realize that, 
+  despite my love for music, performance did not allow me to use my mind in 
+  the ways I wanted.  So with the help of my wife, cheap wine, and expensive 
+  moldy cheese I made the decision to head in a different direction: 
+  programming.  
+</p>
+<p>
+  In a way programming is not unlike music and French combined.  There is 
+  still the challenge and excitement of learning a foreign language but also 
+  the thrill of creating something beautiful.  
+  I've been hooked ever since.
 </p>
 {% endblock %}
 
