--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,8 @@ html {
   margin: 0 auto;
   font-family: Helvetica;
   color: #586e75;
-  background-color: #eee8d5;
+  background-color: #586e75;
+  /*background-color: #eee8d5;*/
   /*background-color: #fdf6e3;*/
 }
 .container {
