grammar and styling changes

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -26,10 +26,14 @@
   <br>...
 </h2>
 <p>
-  Having done my time in higer education I decided to start the long and 
-  arduous path to recovery.  Along the way I've picked up a fondness for 
-  good bread, <a href="http://www.ouaismaisbon.ch">bizarre French humor</a>, 
-  old Scifi, and a great eye for photography.   
+  Having done my time in higher education I decided to start the long and 
+  arduous path to recovery.  Along the way I've developed a great eye for 
+  photography, a fondness for good bread, old scifi, and 
+  <a href="http://www.ouaismaisbon.ch" class="french">bizarre French humor</a>.  
+  <br>
+</p>
+<p>
+  Next stop?  Embracing my inner nerd.
 </p>
 {% endblock %}
 
@@ -65,6 +69,27 @@
   Look What I Can Do!
   <br>...
 </h2>
+<p>
+  On an average day I am a treasure trove of various skills and abilities.  
+  Including, but not limited to:
+  <h3>
+    Code
+  </h3>
+  <ul>
+    <li>
+      HTML5
+    </li>
+    <li>
+      CSS3
+    </li>
+    <li>
+      Python
+    </li>
+    <li>
+      Flask
+    </li>
+</p>
+
 {% endblock %}
 
 {% block hireMe %}
