--- a/static/style.css
+++ b/static/style.css
@@ -3,19 +3,21 @@ html {
   margin: 0 auto;
   font-family: Helvetica;
   color: #586e75;
-  background-color: #586e75;
+  background: #93a1a1;
+  /*background-color: #586e75;*/
   /*background-color: #eee8d5;*/
   /*background-color: #fdf6e3;*/
 }
 .container {
-  border-top: 5px solid #cb4b16;
-  border-bottom: 5px solid #cb4b16;
+  /*border-top: 5px solid #cb4b16;
+  border-bottom: 5px solid #cb4b16;*/
   padding: 30px;
-  border-left: 5px solid #cb4b16;
-  border-right: 5px solid #cb4b16;
+  /*border-left: 5px solid #cb4b16;
+  border-right: 5px solid #cb4b16;*/
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
+  border: 0px solid #cb4b16;
   border-radius: 10px;
   background-color: #fdf6e3;
   padding-right: 30px;
@@ -52,13 +54,13 @@ html {
   padding-left: 45px;
   text-align: left;
   word-spacing: 2px;
+  line-height: 230%;
   float: left;
   clear: both;
 }
 a {
   font-size: 125%;
   position: relative;
-  font-family: Futura;
   text-decoration: none;
 }
 a:link {
@@ -73,13 +75,15 @@ a:hover {
 a:active {
   top: 2px;
 }
+a.french {
+  font-size: 111%;
+}
 .page-content {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 25px;
   padding-right: 25px;
   margin: 0 0 30px 0;
-  border: 5px solid #cb4b16;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
@@ -91,7 +95,6 @@ a:active {
 }
 .page-footer {
   max-width: 95%;
-  border-top: 5px solid #cb4b16;
   height: 0px;
   line-height: 20%;
   margin: 0 auto;
