minor style changes.  more content

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -52,39 +52,39 @@
   <li>Python</li>
   <li>Building websites with Flask</li>
   <li>All of the above via the terminal and VIM</li>
-</ul>
+</ul><br>
 <h3>Computers</h3>
 <ul>
   <li>Strong knowledge and maintenance of Linux, Mac OS X, and Windows</li>
-</ul>
+</ul><br>
 <h3>Organ Building and Maintenance</h3>
 <ul>
   <li>Not that you do, but if you had a pipe organ I could maintain it</li>
   <li>Various construction and building techniques</li>
   <li>Competancy with wide range of power tools and equipment</li>
-</ul>
+</ul><br>
 <h3>Photography</h3>
 <ul>
   <li>Professional quality, print worthy photos</li>
   <li>Consistant results with equipment ranging from iPhones to DSLR's</li>
   <li>Photoshop, Aperture, Corel Aftershot Pro, and more</li>
-</ul>
+</ul><br>
 <h3>French</h3>
 <ul>
   <li>Working spoken and written proficiency</li>
   <li>Masterful use of exasperated facial expressions 
     and wild gesticulations</li>
-</ul>
+</ul><br>
 <h3>Bonus</h3>
 <ul>
   <li>Great sense of humor</li>
-  <li>Most of my home brew is usually given away to friends</li>
+  <li>Most of my home brew gets given away to friends</li>
   <li>I never shy at getting my hands dirty</li>
 </ul>
 {% endblock %}
 
 {% block hireMe %}
-<h2>Hire Me, Damnit!!!<br>...</h2>
+<h2>Hire Me, Damnit<br>...</h2>
 {% endblock %}
 
 {% block resume %}
