--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -71,7 +71,7 @@
 </ul><br>
 <h3>French</h3>
 <ul>
-  <li>Working spoken and written proficiency</li>
+  <li>Spoken and written proficiency</li>
   <li>Masterful use of exasperated facial expressions 
     and wild gesticulations</li>
 </ul><br>
