--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -84,7 +84,17 @@
 {% endblock %}
 
 {% block hireMe %}
-<h2>Hire Me, Damnit<br>...</h2>
+<h2>Hire Me Already!<br>...</h2>
+<p>I'm looking for a job where I can use my love and knowledge of technologie 
+  every day, in an environment that will challenge my abillities, and allow 
+  me to grow.</p>
+<p>You need someone who learns fast on their feet, works well with others, and 
+  strives to provide original and apealing solutions to tasks at hand.</p>
+<p>With my unique background and skill set I can give you the youthful energy 
+  of a recent graduate, a strong eye for detail with the desire to always
+  find a better way, and the enthusiasm and loyalty of someone who is 
+  excited to learn something new every day.</p>
+<p>Hire me and you wont be dissapointed.</p>
 {% endblock %}
 
 {% block resume %}
