--- a/static/style.css
+++ b/static/style.css
@@ -3,17 +3,10 @@ html {
   margin: 0 auto;
   font-family: Helvetica;
   color: #586e75;
-  background: #93a1a1;
-  /*background-color: #586e75;*/
-  /*background-color: #eee8d5;*/
-  /*background-color: #fdf6e3;*/
+  background-color: #657b83;
 }
 .container {
-  /*border-top: 5px solid #cb4b16;
-  border-bottom: 5px solid #cb4b16;*/
   padding: 30px;
-  /*border-left: 5px solid #cb4b16;
-  border-right: 5px solid #cb4b16;*/
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
