--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -32,10 +32,12 @@
         {% block hireMe %}
         {% endblock %}
       </div>
-      <div class="page-content">
+      <div class="page-content" id="resume">
         {% block resume %}
         {% endblock %}
       </div> 
+        <img src="/static/small_foot_left.png" alt="FOOT" class="left-foot"/>
+        <img src="/static/small_foot_right.png" alt="FOOT" class="right-foot"/>
       <div class="page-footer">
         {% block page_footer %}
         {% endblock page_footer %}
