--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -85,7 +85,7 @@
 
 {% block hireMe %}
 <h2>Hire Me Already!<br>...</h2>
-<p>I'm looking for a job where I can use my love and knowledge of technologie 
+<p>I'm looking for a job where I can use my love and knowledge of technology 
   every day, in an environment that will challenge my abillities, and allow 
   me to grow.</p>
 <p>You need someone who learns fast on their feet, works well with others, and 
@@ -94,7 +94,7 @@
   of a recent graduate, a strong eye for detail with the desire to always
   find a better way, and the enthusiasm and loyalty of someone who is 
   excited to learn something new every day.</p>
-<p>Hire me and you wont be dissapointed.</p>
+<p>Hire me and you wont be disappointed.</p>
 {% endblock %}
 
 {% block resume %}
