added target="_blank" to links

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,7 @@
 
 {% block menu %}
 <h2><em>&raquoTake a gander at 
-    <a href="http://www.baroquebloke.com">My Photography</a>.
+    <a href="http://www.baroquebloke.com" target="_blank">My Photography</a>.
     <br>&raquoRead my resume below or <a href="/static/FarnsworthResume.pdf" 
       download="Jacob Farnsworth's Resume">Download It Here</a>.
     <br>&raquoHave some questions?  Feel free to 
@@ -18,7 +18,8 @@
 <p>Having done my time in higher education I decided to start the long and 
   arduous path to recovery.  Along the way I've developed a great eye for 
   photography, a fondness for good bread, old scifi, and 
-  <a href="http://www.ouaismaisbon.ch" class="french">bizarre French humor</a>.  
+  <a href="http://www.ouaismaisbon.ch" class="french" 
+    target="_blank">bizarre French humor</a>.  
   <br></p>
 <p>Next stop?  Embracing my inner nerd.</p>
 {% endblock %}
