--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -36,8 +36,8 @@
         {% block resume %}
         {% endblock %}
       </div> 
-        <img src="/static/small_foot_left.png" alt="FOOT" class="left-foot"/>
-        <img src="/static/small_foot_right.png" alt="FOOT" class="right-foot"/>
+        <img src="/static/side_left.png" alt="FOOT" class="left-foot"/>
+        <img src="/static/side_right.png" alt="FOOT" class="right-foot"/>
       <div class="page-footer">
         {% block page_footer %}
         {% endblock page_footer %}
