--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -95,7 +95,7 @@
   of a recent graduate, a strong eye for detail with the desire to always
   find a better way, and the enthusiasm and loyalty of someone who is 
   excited to learn something new every day.</p>
-<p>Hire me and you wont be disappointed.</p>
+<p>Hire me and you won't be disappointed.</p>
 {% endblock %}
 
 {% block resume %}
