removed superfluous code

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -32,7 +32,7 @@
         {% block hireMe %}
         {% endblock %}
       </div>
-      <div class="page-content" id="resume">
+      <div class="page-content">
         {% block resume %}
         {% endblock %}
       </div> 
