--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,8 +15,8 @@
 
 {% block personal %}
 <h2>The Lowdown<br>...</h2>
-<p>Having done my time in higher education I decided to start the long and 
-  arduous path to recovery.  Along the way I've developed a great eye for 
+<p>Having done my time in higher education, I decided to start the long and 
+  arduous path to recovery.  Along the way, I've developed a great eye for 
   photography, a fondness for good bread, old scifi, and 
   <a href="http://www.ouaismaisbon.ch" class="french" 
     target="_blank">bizarre French humor</a>.  
@@ -26,17 +26,17 @@
 
 {% block why_programming %}
 <h2>What Brought Me Here?<br>...</h2>
-<p>When I was younger I fell in love with music.  This proceeded to guide my 
+<p>When I was younger, I fell in love with music.  This proceeded to guide my 
   life for well over a decade, through highschool, a couple years at 
   Florida State University, and finally to Oberlin Conservatory.  
-  While there I met a girl who, unbeknownst to me, would steal me away to
+  While there, I met a girl who, unbeknownst to me, would steal me away to
   France and eventually become my wife.</p>
-<p>Though we're stateside again those two years abroad helped me realize that, 
+<p>Though we're stateside again, those two years abroad helped me realize that, 
   despite my love for music, performance did not allow me to use my mind in 
   the ways I wanted.  So with the help of my wife, cheap wine, and expensive 
   moldy cheese I made the decision to head in a different direction: 
   programming.</p>
-<p>In a way programming is not unlike music and French combined.  There is 
+<p>In a way, programming is not unlike music and French combined.  There is 
   still the challenge and excitement of learning a foreign language but also 
   the thrill of creating something beautiful.  
   I've been hooked ever since.</p>
@@ -44,8 +44,8 @@
 
 {% block skillz %}
 <h2>Skills<br>...</h2>
-<p>On an average day I am a treasure trove of various skills and abilities.  
-  Including, but not limited to:</p>
+<p>On an average day, I am a treasure trove of various skills and abilities,  
+  including, but not limited to:</p>
 <h3>Code</h3>
 <ul>
   <li>HTML5</li>
@@ -62,12 +62,12 @@
 <ul>
   <li>Not that you do, but if you had a pipe organ I could maintain it</li>
   <li>Various construction and building techniques</li>
-  <li>Competancy with wide range of power tools and equipment</li>
+  <li>Competency with wide range of power tools and equipment</li>
 </ul><br>
 <h3>Photography</h3>
 <ul>
   <li>Professional quality, print worthy photos</li>
-  <li>Consistant results with equipment ranging from iPhones to DSLR's</li>
+  <li>Consistent results with equipment ranging from iPhones to DSLR's</li>
   <li>Photoshop, Aperture, Corel Aftershot Pro, and more</li>
 </ul><br>
 <h3>French</h3>
@@ -90,8 +90,8 @@
   every day, in an environment that will challenge my abillities, and allow 
   me to grow.</p>
 <p>You need someone who learns fast on their feet, works well with others, and 
-  strives to provide original and apealing solutions to tasks at hand.</p>
-<p>With my unique background and skill set I can give you the youthful energy 
+  strives to provide original and appealing solutions to tasks at hand.</p>
+<p>With my unique background and skill set, I can give you the youthful energy 
   of a recent graduate, a strong eye for detail with the desire to always
   find a better way, and the enthusiasm and loyalty of someone who is 
   excited to learn something new every day.</p>
